tests/pass/run/imported_namespace_parity/support.kira
function value(): I64 {
    return 41 + 1
}
